@@ -1,3 +1,8 @@
+2003-08-05  Sam Steingold  <sds@gnu.org>
+
+	* foreign1.lisp (DEF-C-VAR, DEF-CALL-OUT): do not call NOTE-C-VAR
+	and NOTE-C-FUN for dynamic objects
+
 2003-08-04  Sam Steingold  <sds@gnu.org>
 
 	extended dynamic object loading from AMIGAOS to WIN32_NATIVE & POSIX
